# memoria

./: .cproject  .gitignore  .hgignore  .project  CMakeLists.txt  CMakeLists.txt.autosave  COPYRIGHT_NOTICE  GEMINI.md  LICENCE.disruptor  NOTICE  README.md  build.sh-template  contacts.txt  expand-tabs.sh  make_wheel.sh.template  memoria.kdev4  mkbuild.sh-template  setup.py  vcpkg-configuration.json  vcpkg.json  vcpkg.json-full
app_init/: CMakeLists.txt  static_app_init.cpp
containers/: CMakeLists.txt  containers_init.cpp  empty.cpp
containers-api/: CMakeLists.txt  containers_init.cpp  metadata_tools.cpp
core/lib/: CMakeLists.txt  arena_allocator.cpp  datatype_convertion.hpp  fixed_size_datum.cpp  graph.cpp  icu_regexp_impl.hpp  metadata_tools.cpp  models.cpp  object_pool.cpp  random.cpp  reflection.cpp  reflection_internal.hpp  result.cpp  static_core_init.cpp  strings.cpp  time.cpp  uid_256.cpp  uid_64.cpp  ustrings.cpp  uuid.cpp  varchars.cpp
mbt/: CMakeLists.txt  cg_config.cpp  cg_filegen.cpp  cg_module.cpp  cg_project.cpp  cg_type_factory.cpp  cg_type_instance.cpp  codegen.cpp  inja_ctr_init.cpp  inja_ctr_typefactory.cpp  vcpkg.json
mbt/include/: code_module.hpp  codegen.hpp  codegen_ast_tools.hpp  compiler.hpp
mcp/: CMakeLists.txt  mcp_cmake_vtab.cpp  mcp_database.cpp  mcp_http_transport.cpp  mcp_main.cpp  mcp_server.cpp  mcp_stdio_transport.cpp  mcp_utils.cpp
runtimes/: CMakeLists.txt  empty.cpp  hrpc_impl_call.cpp  hrpc_impl_context.cpp  hrpc_impl_endpoints.cpp  hrpc_impl_input_channel.cpp  hrpc_impl_output_channel.cpp
runtimes/asio/: CMakeLists.txt  empty.cpp  reactor.cpp
runtimes/reactor/: CMakeLists.txt
runtimes/seastar/: CMakeLists.txt
sandbox/: CMakeLists.txt  benchmark_common.hpp  blk_distr.cpp  boost-fibbench.cpp  coro1.cpp  crashing.cpp  dma.cpp  dsl_engine_sb.cpp  ld_doc.cpp  process_sb.cpp  queue_bench_atomic.cpp  seastar-corobench.cpp  send_msg_bench_raw.cpp  swmr_store.cpp
src/: CMakeLists.txt  alloc.cpp  anon_pipes.cpp  crash.cpp  disruptor_bm.cpp  files.cpp  fmt_u16.cpp  icu_regexp.cpp  intellectio.cpp  memoria.cpp  named_pipes.cpp  none.cpp  print_env.cpp  processes.cpp  qt_app.cpp  sample_allocator.cpp  shared_ptrs.cpp  sockets.cpp  spsc_queue_bm.cpp  tcp_client.cpp  tcp_server.cpp  timers.cpp  ustrings.cpp  yaml.cpp
src/allocators/: CMakeLists.txt
src/app_init/: CMakeLists.txt  static_app_init.cpp
src/benchmarks/: CMakeLists.txt  array_ins.cpp  array_rd.cpp  asio_echo_server.cpp  blocking_tcp_echo_client.cpp  tcp_echo_client.cpp  tcp_echo_server.cpp  vector_ins.cpp  vector_rd.cpp
src/build-tools/: CMakeLists.txt  ig_tool.py
src/codegen/: CMakeLists.txt  cg_ast_tools.cpp  cg_clang_ast_python.cpp  cg_codegen_python.cpp  cg_filegen.cpp  cg_module.cpp  cg_project.cpp  cg_type_factory.cpp  cg_type_instance.cpp  codegen.cpp  compiler.cpp  generators.cpp  inja_ctr_typefactory.cpp  inja_datatype_factory.cpp  inja_generators.cpp  inja_generators.hpp  vcpkg.json
src/containers/: CMakeLists.txt  allocation_map_cow.cpp  allocation_map_dflt.cpp  dt_ctr_datatypes.cpp  edge_map_dflt.cpp  map_bigint_bigint_cow.cpp  map_bigint_bigint_dflt.cpp  map_bigint_varchar_cow.cpp  map_bigint_varchar_dflt.cpp  map_int64_string_dflt.cpp  map_string_string_cow.cpp  map_string_string_dflt.cpp  map_uuid_uuid_cow.cpp  multimap_llb_cow.cpp  multimap_llb_dflt.cpp  multimap_uub_cow.cpp  multimap_uub_dflt.cpp  multimap_varchar_varchar_cow.cpp  multimap_varchar_varchar_dflt.cpp  set_fxd_array_16_cow.cpp  set_fxd_array_16_dflt.cpp  set_uuid_cow.cpp  set_uuid_dflt.cpp  set_varchar_cow.cpp  set_varchar_dflt.cpp  static_core_ctrs_init.cpp  update_log_dflt.cpp  vector_sdn_cow.cpp  vector_sdn_dflt.cpp  vector_uint8_cow.cpp  vector_uint8_dflt.cpp  vector_varchar_cow.cpp  vector_varchar_dflt.cpp
src/context/: CMakeLists.txt  fiber.cpp
src/contianers/: dummy.cpp
src/core/: CMakeLists.txt
src/datascope/: CMakeLists.txt  allocator_model.cpp  allocator_model.hpp  datascope.cpp  main_window.cpp  main_window.hpp  main_window.ui  vertex_tree_item.cpp  vertex_tree_item.hpp
src/examples/: CMakeLists.txt  ctrprops_example.cpp  datatypes.cpp  map.cpp  map_example.cpp  map_iovector_ss.cpp  map_iovector_ss_lw.cpp  mapped.cpp  multimap.cpp  multimap_example.cpp  multimap_iov_all.cpp  multimap_iovector.cpp  multimap_reader.cpp  multimap_stream.cpp  sdn2_example.cpp  set_example.cpp  set_pointq_example.cpp  set_pointq_example2.cpp  store.cpp  typesig.cpp  vector.cpp  vector_example.cpp  vector_iovector_string.cpp  vector_iovector_ubyte.cpp  wt.cpp
src/fiber/: CMakeLists.txt  barrier.cpp  condition_variable.cpp  context.cpp  fiber.cpp  future.cpp  mutex.cpp  properties.cpp  recursive_mutex.cpp  recursive_timed_mutex.cpp  scheduler.cpp  timed_mutex.cpp
src/filesystem/: codecvt_error_category.cpp  operations.cpp  path.cpp  path_traits.cpp  portability.cpp  unique_path.cpp  utf8_codecvt_facet.cpp  windows_file_codecvt.cpp  windows_file_codecvt.hpp
src/filesystem_classic/: CMakeLists.txt  directory.cpp  operations.cpp  unique_path.cpp
src/filesystem_common/: CMakeLists.txt  codecvt_error_category.cpp  error_handling.hpp  exception.cpp  path.cpp  path_traits.cpp  portability.cpp  utf8_codecvt_facet.cpp  windows_file_codecvt.cpp  windows_file_codecvt.hpp  windows_tools.hpp
src/filesystem_reactor/: CMakeLists.txt  directory.cpp  operations.cpp  unique_path.cpp
src/fmt/: format.cpp  ostream.cpp  posix.cpp  printf.cpp
src/hrpc/: hrpc_impl_call.cpp  hrpc_impl_call.hpp  hrpc_impl_client.cpp  hrpc_impl_client.hpp  hrpc_impl_common.hpp  hrpc_impl_connection.cpp  hrpc_impl_connection.hpp  hrpc_impl_context.cpp  hrpc_impl_context.hpp  hrpc_impl_endpoints.cpp  hrpc_impl_input_channel.cpp  hrpc_impl_input_channel.hpp  hrpc_impl_output_channel.cpp  hrpc_impl_output_channel.hpp  hrpc_impl_server.hpp  hrpc_impl_service.cpp  hrpc_impl_service.hpp  hrpc_impl_session.hpp  hrpc_impl_tcp.cpp  hrpc_impl_tcp.hpp  htpc_impl_call.cpp  htpc_impl_context.cpp  htpc_impl_input_channel.cpp  (+5 more)
stores/: CMakeLists.txt  static_core_stores_init.cpp
stores-api/: CMakeLists.txt  empty.cpp
(+5348 files in other folders)
